--- a/test/profiler.html
+++ b/test/profiler.html
@@ -10,10 +10,13 @@
 			function fn(value1, value2, value3){
 				return value1 + value2 + value3;
 			}
+			var start = Date.now();
 			var wrapped = BetterCurry.wrap(fn);
-			for (var i = 0; i < 100000000; i++) {
+			var iterations = 100000000;
+			for (var i = 0; i < iterations; i++) {
 				wrapped(1,2,3);
 			}
+			console.log(Date.now() - start + 'ms for ' + iterations + ' iterations');
 		})();
 	</script>
 </body>
